--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/borsch.html">Borsch</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/pasta.html">Pasta</a>
+    <ul>
+        <li><a href="recipes/borsch.html">Borsch</a> </li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/pasta.html">Pasta</a></li>
+    </ul>
 </body>
 
 </html>
